KOST-Tools v1.1.2.2 (Java17, XML)
=============================
KOST-Val v2.2.1.1:
- Java Version 17 (Probleme Drittapp mit 21)
- XML mit bis zu 3 Offset erkannt
- Bugfix SIP 3d ca false ohne Anmerkung