@@ -60,13 +60,13 @@ public class Controllervalinit implements MessageConstants {
 			return valInit;
 		}
 		if (args[2].equalsIgnoreCase("--de")) {
-			locale = Locale.of("de");
+			locale = new Locale("de");
 		} else if (args[2].equalsIgnoreCase("--fr")) {
-			locale = Locale.of("fr");
+			locale = new Locale("fr");
 		} else if (args[2].equalsIgnoreCase("--it")) {
-			locale = Locale.of("it");
+			locale = new Locale("it");
 		} else if (args[2].equalsIgnoreCase("--en")) {
-			locale = Locale.of("en");
+			locale = new Locale("en");
 		} else {
 			System.out.println(getTextResourceService().getText(locale, ERROR_PARAMETER_USAGE));
 			valInit = false;
